Create app layout

--- a/src/App.scss
+++ b/src/App.scss
@@ -1,1 +1,21 @@
+/*
 
+-- Grid system
+   10 columns
+   column width = 9rem
+   gutter = 3.2rem
+   margin = 2.6rem
+   full width = 1240px
+
+
+*/
+
+.app {
+  max-width: 1240px;
+  margin: 0 auto;
+  padding: 0 2.6rem;
+
+  display: grid;
+  grid-template-columns: repeat(10, 1fr);
+  grid-gap: 3.2rem;
+}
