--- a/src/Index.scss
+++ b/src/Index.scss
@@ -38,6 +38,6 @@ body {
   font-family: 'Manrope', sans-serif;
   font-weight: 400;
   line-height: 1;
-  color: #333;
-  background-color: #fff;
+  color: #7e7e7e;
+  background-color: #121212;
 }
