Add logo to navigation

--- a/src/App.scss
+++ b/src/App.scss
@@ -13,7 +13,7 @@
 .app {
   max-width: 1240px;
   margin: 0 auto;
-  padding: 0 2.6rem;
+  padding: 3.2rem 2.6rem;
 
   display: grid;
   grid-template-columns: repeat(10, 1fr);
