--- a/src/Index.scss
+++ b/src/Index.scss
@@ -41,3 +41,18 @@ body {
   color: #7e7e7e;
   background-color: #121212;
 }
+
+/*
+
+-- Typography
+    Normal: 1.4rem 600
+    Small: 1.2rem 400
+
+-- Colors
+    Ligh text: #7e7e7e
+    White text: #fff
+
+    Background: #121212
+
+
+*/
