--- a/src/components/posts/Post.scss
+++ b/src/components/posts/Post.scss
@@ -1,4 +1,7 @@
 .post {
+  display: flex;
+  flex-direction: column;
+  gap: 0.4rem;
 
   &__img {
     width: 100%;
@@ -8,6 +11,23 @@
     object-fit: cover;
     object-position: center;
     border-radius: 12px;
+  }
+
+  &__icons {
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+    gap: 0.4rem;
+    font-size: 2rem;
+
+    .like {
+      font-size: 2.4rem;
+    }
+
+    & *:hover {
+      color: #555;
+      cursor: pointer;
+    }
   }
 
   &__content {
