--- a/src/components/posts/Post.scss
+++ b/src/components/posts/Post.scss
@@ -13,6 +13,12 @@
     border-radius: 12px;
   }
 
+  &__description {
+    display: grid;
+    grid-template-columns: 1fr auto;
+    align-items: center;
+  }
+
   &__icons {
     display: flex;
     align-items: center;
