Show information based on data

--- a/src/App.scss
+++ b/src/App.scss
@@ -7,7 +7,13 @@
    margin = 2.6rem
    full width = 1240px
 
+-- Typography
+  small: 12px
+  regular: 14px
+  large: 16px
 
+  heading 1: 2
+ 
 */
 
 .app {
