--- a/src/components/user/UserProfile.scss
+++ b/src/components/user/UserProfile.scss
@@ -5,6 +5,8 @@
   &__info {
     display: grid;
     grid-template-columns: auto 1fr;
+    align-items: center;
+    gap: 1.6rem;
   }
 
   &__img {
@@ -17,5 +19,25 @@
     font-weight: 600;
     color: #fff;
     letter-spacing: 1.2;
+    display: flex;
+    align-items: center;
+    gap: 0.4rem;
+    margin-bottom: 0.8rem;
+  }
+
+  &__button {
+    color: #7e7e7e;
+    background-color: rgba(126, 126, 126, 0.2);
+    display: inline-flex;
+    align-items: center;
+    gap: 0.4rem;
+
+    &:hover {
+      background-color: rgba(126, 126, 126, 0.4);
+    }
+  }
+
+  &__description {
+    font-size: 1.2rem;
   }
 }
