--- a/src/components/user/User.scss
+++ b/src/components/user/User.scss
@@ -1,7 +1,9 @@
 .user {
   grid-column: 3 / -1;
 
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
+  &__header {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+  }
 }
