--- a/src/components/UI/Search.scss
+++ b/src/components/UI/Search.scss
@@ -1,9 +1,10 @@
-.posts-search {
+.search {
   background-color: #212121;
   border-radius: 3px;
   padding: 0.8rem;
   display: flex;
   gap: 0.8rem;
+  margin-bottom: 1.6rem;
 
   &__icon {
     font-size: 1.6rem;
