--- a/src/components/auth/Login.scss
+++ b/src/components/auth/Login.scss
@@ -47,3 +47,11 @@
   margin: 0 auto;
   margin-bottom: 1.6rem;
 }
+
+.login-link:link,
+.login-link:visited {
+  text-align: center;
+  color: #7d7d7d;
+  text-decoration: none;
+  margin-top: 0.4rem;
+}
