--- a/src/components/posts/Post.scss
+++ b/src/components/posts/Post.scss
@@ -3,6 +3,9 @@
   flex-direction: column;
   gap: 0.8rem;
 
+  &:hover {
+  }
+
   &-profile {
     display: flex;
     align-items: center;
@@ -23,10 +26,30 @@
     width: 100%;
     height: auto;
     margin-bottom: 1rem;
-    height: 48rem;
+    height: 100%;
     object-fit: cover;
     object-position: center;
+  }
+
+  &__img-container {
+    position: relative;
+    height: 48rem;
+    overflow: hidden;
     border-radius: 12px;
+    cursor: pointer;
+  }
+
+  &__img-container::before {
+    content: '';
+    background-color: rgb(0, 0, 0, 0);
+    position: absolute;
+    height: 100%;
+    width: 100%;
+    transition: background-color 0.1s;
+  }
+
+  &__img-container:hover::before {
+    background-color: rgb(0, 0, 0, 0.1);
   }
 
   &__description {
