--- a/src/components/UI/PostOverlay.scss
+++ b/src/components/UI/PostOverlay.scss
@@ -30,4 +30,18 @@
       object-fit: cover;
     }
   }
+
+  &__close-btn {
+    position: absolute;
+    top: 0.8rem;
+    right: 0.8rem;
+    font-size: 2.8rem;
+    cursor: pointer;
+    padding: 0.4rem;
+
+    &:hover {
+      background-color: #121212;
+      border-radius: 50%;
+    }
+  }
 }
