Add like and dislike feature

--- a/src/components/UI/PostOverlay.scss
+++ b/src/components/UI/PostOverlay.scss
@@ -14,7 +14,7 @@
 }
 
 .post-overlay {
-  background-color: #fff;
+  background-color: #121212;
   border-radius: 1.2rem;
   box-shadow: 0 10px 20px rgb(0, 0, 0, 0.25);
   height: 50rem;
