--- a/src/components/nav/NavLinks.scss
+++ b/src/components/nav/NavLinks.scss
@@ -24,6 +24,6 @@
   color: #7e7e7e;
 }
 
-.nav-links__item--active .nav-links__icon {
+.nav-links__link--active .nav-links__icon {
   color: #fff;
 }
