--- a/src/components/CreatePost/CreatePost.scss
+++ b/src/components/CreatePost/CreatePost.scss
@@ -1,16 +1,12 @@
 .create-post {
-  position: sticky;
-  bottom: 10rem;
-  left: 20rem;
-  height: 4rem;
-  width: 4rem;
   display: flex;
   justify-content: center;
   align-items: center;
+  padding: 0.8rem 0;
 
-  font-size: 3rem;
-  background-color: #0094f64d;
+  font-size: 1.6rem;
+  font-weight: 700;
+  background-color: #0094f6;
   border-radius: 1.2rem;
-  border: 1px solid #0094f6;
-  color: #0094f6;
+  color: #121212;
 }
