--- a/src/components/posts/Post.scss
+++ b/src/components/posts/Post.scss
@@ -14,6 +14,9 @@
 
     &__img {
       border-radius: 50%;
+      height: 2.4rem;
+      width: 2.4rem;
+      object-fit: cover;
     }
 
     &__name {
