--- a/src/App.scss
+++ b/src/App.scss
@@ -28,3 +28,22 @@
   align-items: start;
   min-height: 100vh;
 }
+
+.spinner {
+  padding: 4rem;
+
+  img {
+    height: 6rem;
+    animation: spin 2.5s linear infinite;
+  }
+}
+
+// spinning animation
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
