Change nav links divider line

--- a/src/components/nav/NavLinks.scss
+++ b/src/components/nav/NavLinks.scss
@@ -27,3 +27,9 @@
 .nav-links__link--active .nav-links__icon {
   color: #fff;
 }
+
+.nav-links__line {
+  height: 2px;
+  width: 100%;
+  background-color: #7e7e7e;
+}
