--- a/src/components/user/UserPosts.scss
+++ b/src/components/user/UserPosts.scss
@@ -10,4 +10,11 @@
     object-fit: cover;
     border-radius: 12px;
   }
+
+  .loading-image {
+    width: 100%;
+    height: 20rem;
+    border-radius: 12px;
+    // background: #eee;
+  }
 }
