--- a/src/components/CreatePost/CreatePost.scss
+++ b/src/components/CreatePost/CreatePost.scss
@@ -46,6 +46,7 @@
   font-size: 1.6rem;
   font-weight: 600;
   background-color: #0094f6;
+  border: none;
   border-radius: 1.2rem;
   color: #fff;
   transition: background-color 0.2s ease-in-out;
