--- a/src/components/posts/PostOverlay.scss
+++ b/src/components/posts/PostOverlay.scss
@@ -51,7 +51,7 @@
   padding: 1.6rem;
   display: flex;
   flex-direction: column;
-  gap: 0.8rem;
+  gap: 1.2rem;
 }
 
 .overlay-header {
@@ -97,12 +97,13 @@
 
   &__username {
     font-size: 1.4rem;
+    padding-right: 0.8rem;
     color: #fff;
   }
 
   &__content {
     padding-top: 0.4rem;
-    font-size: 1.2rem;
+    font-size: 1.6rem;
   }
 }
 
