--- a/src/components/CreatePost/CreatePost.scss
+++ b/src/components/CreatePost/CreatePost.scss
@@ -60,3 +60,26 @@
   height: 16rem;
   width: 16rem;
 }
+
+.create-overlay__close-btn {
+  position: absolute;
+  top: 0.8rem;
+  right: 0.8rem;
+  font-size: 2.8rem;
+  cursor: pointer;
+  padding: 0.4rem;
+
+  &:hover {
+    background-color: #121212;
+    border-radius: 50%;
+  }
+}
+
+.create-overlay__backdrop {
+  position: fixed;
+  top: 0;
+  left: 0;
+  height: 100vh;
+  width: 100vw;
+  background-color: rgb(0, 0, 0, 0.5);
+}
