--- a/src/App.scss
+++ b/src/App.scss
@@ -17,14 +17,14 @@
 */
 
 .app {
-  max-width: 1240px;
+  // max-width: 1240px;
   margin: 0 auto;
-  padding: 3.2rem 2.6rem;
+  padding: 3.2rem 2.6rem 0 2.6rem;
   contain: content;
 
   display: grid;
   grid-template-columns: repeat(10, 1fr);
-  grid-gap: 3.2rem;
+  grid-gap: 11.2rem;
   align-items: start;
   min-height: 100vh;
 }
