--- a/src/Index.scss
+++ b/src/Index.scss
@@ -47,6 +47,16 @@ a:visited {
   text-decoration: none;
 }
 
+.video {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  z-index: -1;
+}
+
 /*
 
 -- Typography
