--- a/src/components/nav/NavFooter.scss
+++ b/src/components/nav/NavFooter.scss
@@ -2,4 +2,8 @@
   display: flex;
   flex-direction: column;
   gap: 1.6rem;
+
+  // place to bottom
+  margin-top: auto;
+  margin-bottom: 2.4rem;
 }
