--- a/src/components/posts/Post.scss
+++ b/src/components/posts/Post.scss
@@ -47,6 +47,13 @@
     overflow: hidden;
     border-radius: 12px;
     cursor: pointer;
+
+    img {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+      object-position: center;
+    }
   }
 
   &__img-container::before {
