--- a/src/components/posts/PostOverlay.scss
+++ b/src/components/posts/PostOverlay.scss
@@ -39,10 +39,20 @@
 }
 
 .overlay-image {
+  position: relative;
+  height: 100%;
+  width: 100%;
+  overflow: scroll;
+  display: flex;
+  align-items: center;
+
+  // scroll bar style
+  &::-webkit-scrollbar {
+    display: none;
+  }
+
   img {
-    height: 100%;
     width: 100%;
-    object-fit: cover;
   }
 }
 
