--- a/src/components/user/UserPosts.scss
+++ b/src/components/user/UserPosts.scss
@@ -4,7 +4,8 @@
 
   grid-gap: 2.4rem;
 
-  img {
+  img,
+  video {
     width: 100%;
     height: 20rem;
     object-fit: cover;
@@ -15,6 +16,5 @@
     width: 100%;
     height: 20rem;
     border-radius: 12px;
-    // background: #eee;
   }
 }
