--- a/src/App.scss
+++ b/src/App.scss
@@ -17,7 +17,7 @@
 */
 
 .app {
-  // max-width: 1240px;
+  max-width: 1440px;
   margin: 0 auto;
   padding: 3.2rem 2.6rem 0 2.6rem;
   contain: content;
