--- a/src/components/CreatePost/CreatePost.scss
+++ b/src/components/CreatePost/CreatePost.scss
@@ -10,11 +10,25 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  gap: 0.8rem;
+  gap: 1.2rem;
 
   background-color: #121212;
   border-radius: 1.2rem;
   box-shadow: 0 10px 20px rgb(0, 0, 0, 0.25);
+
+  &__preview {
+    width: 100%;
+    height: 70%;
+    object-fit: cover;
+    overflow-y: scroll;
+
+    &-img {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+      object-position: center;
+    }
+  }
 
   &__text {
     font-size: 1.6rem;
@@ -82,4 +96,32 @@
   height: 100vh;
   width: 100vw;
   background-color: rgb(0, 0, 0, 0.5);
+}
+
+.file-input__input {
+  width: 0.1px;
+  height: 0.1px;
+  opacity: 0;
+  overflow: hidden;
+  position: absolute;
+  z-index: -1;
+}
+
+.file-input__label {
+  cursor: pointer;
+  display: inline-flex;
+  align-items: center;
+  border-radius: 4px;
+  font-size: 14px;
+  font-weight: 600;
+  color: #fff;
+  font-size: 14px;
+  padding: 10px 12px;
+  background-color: #4245a8;
+  box-shadow: 0px 0px 2px rgba(0, 0, 0, 0.25);
+}
+
+.file-input__label svg {
+  height: 16px;
+  margin-right: 4px;
 }
