--- a/src/components/explore/ExplorePosts.scss
+++ b/src/components/explore/ExplorePosts.scss
@@ -1,6 +1,6 @@
 .explore-posts {
   display: grid;
-  grid-template-columns: repeat(4, 21.2rem);
+  grid-template-columns: 1fr 1fr 1fr 1fr;
   grid-auto-rows: 21.2rem;
   gap: 3.2rem;
 }
