--- a/src/components/user/UserProfile.scss
+++ b/src/components/user/UserProfile.scss
@@ -12,6 +12,8 @@
   &__img {
     height: 9rem;
     width: 9rem;
+    background-position: center;
+    background-size: cover;
     border-radius: 50%;
   }
 
