--- a/src/components/CreatePost/CreatePost.scss
+++ b/src/components/CreatePost/CreatePost.scss
@@ -8,9 +8,10 @@
 
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: space-around;
   align-items: center;
   gap: 1.2rem;
+  padding-bottom: 1.2rem;
 
   background-color: #121212;
   border-radius: 1.2rem;
@@ -28,6 +29,13 @@
       object-fit: cover;
       object-position: center;
     }
+  }
+
+  &-img {
+    width: 100%;
+    height: 100%;
+    margin: 0 auto;
+    margin-left: 0.8rem;
   }
 
   &__text {
@@ -73,6 +81,13 @@
 .create-overlay__icon {
   height: 16rem;
   width: 16rem;
+
+  img {
+    height: 100%;
+    width: 100%;
+    object-fit: cover;
+    object-position: center;
+  }
 }
 
 .create-overlay__close-btn {
@@ -114,10 +129,11 @@
   border-radius: 4px;
   font-size: 14px;
   font-weight: 600;
-  color: #fff;
+  color: #0094f6;
   font-size: 14px;
   padding: 10px 12px;
-  background-color: #4245a8;
+  border: 2px solid #162839;
+  background-color: #2b4d6d2b;
   box-shadow: 0px 0px 2px rgba(0, 0, 0, 0.25);
 }
 
