--- a/src/components/posts/PostOverlay.scss
+++ b/src/components/posts/PostOverlay.scss
@@ -53,6 +53,7 @@
 
   img {
     width: 100%;
+    // height: 100%;
   }
 }
 
@@ -76,6 +77,7 @@
     width: 2.4rem;
     border-radius: 50%;
   }
+
   &__username {
     font-size: 1.4rem;
     font-weight: 600;
