--- a/src/components/settings/Settings.scss
+++ b/src/components/settings/Settings.scss
@@ -12,10 +12,16 @@
     display: flex;
     justify-content: flex-end;
 
-    img {
+    .setting__img--cont {
       height: 4rem;
       width: 4rem;
-      border-radius: 50%;
+
+      img {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+        border-radius: 50%;
+      }
     }
   }
 
@@ -58,4 +64,19 @@
       animation: spin 2.5s linear infinite;
     }
   }
+}
+
+input::file-selector-button {
+  cursor: pointer;
+  display: inline-flex;
+  align-items: center;
+  border-radius: 4px;
+  font-size: 14px;
+  font-weight: 600;
+  color: #0094f6;
+  font-size: 14px;
+  padding: 10px 12px;
+  border: 2px solid #162839;
+  background-color: #2b4d6d2b;
+  box-shadow: 0px 0px 2px rgba(0, 0, 0, 0.25);
 }
