--- a/src/components/auth/Login.scss
+++ b/src/components/auth/Login.scss
@@ -3,6 +3,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  flex-direction: column;
   height: 100%;
 }
 
@@ -12,7 +13,7 @@
   flex-direction: column;
   align-items: stretch;
   gap: 0.8rem;
-  max-width: 30rem;
+  width: 30rem;
   border: 2px solid #7e7e7e80;
   border-radius: 12px;
   box-shadow: 0 10px 20px hsla(0, 0%, 0%, 0.4);
@@ -26,8 +27,9 @@
     background-color: #000;
     border: none;
     outline: none;
-    padding: 0.4rem 0.8rem;
+    padding: 1.2rem 1.8rem;
     border-radius: 3px;
+    font-size: 1.6rem;
   }
 
   input:-webkit-autofill {
@@ -51,7 +53,36 @@
 .login-link:link,
 .login-link:visited {
   text-align: center;
+
   color: #7d7d7d;
   text-decoration: none;
   margin-top: 0.4rem;
+  font-size: 1.2rem;
+
+  display: flex;
+  flex-direction: column;
+  align-items: stretch;
+  gap: 0.8rem;
+  width: 30rem;
+  border: 2px solid #7e7e7e80;
+  border-radius: 12px;
+  box-shadow: 0 10px 20px hsla(0, 0%, 0%, 0.4);
+
+  padding: 2.2rem;
+}
+
+.login-link span {
+  color: #b1b0b0;
+}
+
+.errors {
+  display: flex;
+  flex-direction: column;
+  gap: 0.8rem;
+
+  list-style: none;
+
+  li {
+    font-size: 1.2rem;
+  }
 }
